# dj-m

./: .gitignore  README.md  justfile  project.just  pyproject.toml  requirements.txt
dj_click/: __init__.py
dj_m/: __init__.py
startproject_template/frontend/src/components/: UserMenu.js
startproject_template/mongo_migrations/admin/: 0001_initial.py
startproject_template/mongo_migrations/auth/: 0001_initial.py
startproject_template/mongo_migrations/contenttypes/: 0001_initial.py
startproject_template/project_name/settings/: dev.py-tpl
startproject_template/project_name/templates/: footer.html  header.html
