[project]
name = "dj-click"
version = "0.1.0"
dependencies = [
    "click",
    "django>5,<5.1",
]

[tool.setuptools]
packages = ["dj_click"]

[project.scripts]
dj = "dj_click:cli"

# Too bad these aren't editable
[project.optional-dependencies]
dev = [
    "django-mongodb @ git+ssh://git@github.com/aclark4life/django-mongodb@INTPYTHON-348",
    "pymongo @ git+ssh://git@github.com/aclark4life/mongo-python-driver",
    "django @ git+ssh://git@github.com/aclark4life/django@mongodb-5.0.x",
]
